[metadata]
name = huaytools
version = 1.0.3
url = https://github.com/imhuay/huaytools
license = MIT
description = HuaYang's personal tool library.
long_description = file: README.md
long_description_content_type = text/markdown
author = HuaYang
author_email = imhuay@163.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    requests
    dataclasses; python_version < '3.7'

[options.packages.find]
where=src
